--- a/src/public/scan-details.html
+++ b/src/public/scan-details.html
@@ -107,7 +107,7 @@
         placeholder="Buscar por nombre o email…"
       />
       <button class="btn" id="exportCsvBtn">CSV</button>
-      <button class="btn" id="exportXlsxBtn">Excel</button>
+      <button style="display:none;" class="btn" id="exportXlsxBtn">Excel</button>
     </div>
   </div>
 
